add dockerfile  and change database to postgres and spice things up

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,12 @@
 # Configurações do PostgreSQL
-POSTGRES_USER=root        # defina aqui o Usuário do banco de dados
-POSTGRES_PASSWORD=senha   # defina aqui Senha do banco de dados
+POSTGRES_USER=seuuser        # defina aqui o Usuário do banco de dados
+POSTGRES_PASSWORD=suasenha   # defina aqui Senha do banco de dados
+POSTGRES_HOST=localhost  # Nome do serviço Docker ou localhost se o backend nao estiver rodando em docker
+POSTGRES_PORT=5433  # Porta padrão do PostgreSQL mudada para evitar conflitos(recomendado)
+POSTGRES_DB=vulnera  # Nome do banco de dados
+JWT_SECRET_KEY=suakey # Chave secreta para autenticação JWT (pode ser qualquer string longa e aleatória)
+
+# Crie um arquivo .env na raiz do projeto e preencha estes acima no que foi criado
+# Uma vez definido isso, você pode usar o comando `docker-compose up -d` para iniciar 
+# o banco de dados PostgreSQL e o backend e front e as ferramentas. 
+# O banco de dados será criado automaticamente com as credenciais fornecidas.
