--- a/client/package.json
+++ b/client/package.json
@@ -16,16 +16,18 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^4.1.3",
-    "@tailwindcss/vite": "^4.0.12",
-    "axios": "^1.8.4",
+    "@tailwindcss/vite": "^4.1.7",
+    "axios": "^1.9.0",
     "framer-motion": "^12.5.0",
     "next-themes": "^0.4.4",
+    "pdfjs-dist": "^5.2.133",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
+    "react-pdf": "^9.2.1",
     "react-router-dom": "^7.4.0",
-    "tailwindcss": "^4.0.12",
+    "tailwindcss": "^4.1.7",
     "zod": "^3.24.2"
   },
   "devDependencies": {
