--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-slider": "^1.3.4",
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.2.6",
+    "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
